--- a/jd/pom.xml
+++ b/jd/pom.xml
@@ -5,9 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>utils-jd</artifactId>
-    <groupId>com.laoda271</groupId>
-    <version>1.0</version>
     <packaging>jar</packaging>
+
+    <parent>
+        <artifactId>utils</artifactId>
+        <groupId>com.laoda271</groupId>
+        <version>1.0</version>
+    </parent>
 
     <dependencies>
         <dependency>
